<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">优饮</string>
    <string name="action_settings">Settings</string>
    <string name="login">Test</string>
    <string name="app_host">http://10.0.2.2:8080/youyin/</string>
    <string name="loginServlet">LoginServlet</string>
    <string name="net_server_no_respone">服务器未响应</string>
    <string name="net_error">当前网络不可用，请先连接Internet！</string>
    <string name="loadTitle"><strong>正在更新数据</strong></string>
    <string name="LoadContent"><strong>请稍候……</strong></string>
    <string name="custom_title_back">返回</string>
    <string name="loading">正在加载……</string>
    <string name="land_text">登陆</string>
    <string name="finish">完成</string>
    <string name="hint">请确认你的国家和地区并输入手机号</string>
    <string name="area_hint">国家和地区</string>
    <string name="china">中国</string>
    <string name="prephonenumber">+86</string>
    <string name="hint_password">请输入密码</string>
    <string name="find_password">找回密码？</string>    
    <string name="back">返回</string>  
    
    <!-- 验证码 -->
    <string name="next">下一步</string>
    <string name="phonenumber">+86 13763695984</string>
    <string name="not_accept">收不到验证码？</string>
    <string name="text0">请填写验证码</string>
    <string name="text1">我们已发送</string>
    <string name="text2">验证码短信</string>
    <string name="text3">到这个号码</string>
    <string name="text4">请输入验证码</string>
    <string name="text5">59秒</string>
    <string name="text6">收不到验证码？</string>
    <string name="agree">已阅读并同意</string>
    <string name="register_agree">注册使用协议</string>
    <string name="text7">使用语音验证</string>
    <string name="text8">重新获取</string>
    <string name="text9">666666</string>
    <string name="text10">语音验证码</string>
    <string name="text11">电话拨打中...请留意来自123456的电话</string>
    <string name="text12">重发语音</string>
    
    <!-- 设置密码 -->
    <string name="set_password">请设置密码</string>
    <string name="reset_password">请再次输入确认密码</string>
    <string name="enter_password">请输入6-16位密码</string>
    <string name="retype_password">请再次输入确认密码</string>
    <string name="set_passwordagain">两次输入不一致，请再次输入密码</string>
    

    <!-- 提交订单 -->
    <string name="name1">银子姜</string>
    <string name="phonenumber1">18813756956</string>
    <string name="address">广州中医药大学G627</string>
    <string name="arrive_time">送达时间</string>
    <string name="choose_time">请选择送达时间</string>
    <string name="youyin_beizhu">优饮备注</string>
    <string name="set_beizhu">点击添加备注</string>
    <string name="total_price">订单总价</string>
    <string name="price">￥15</string>
    <string name="pay_pattern">请选择支付方式</string>
    <string name="online_payment">在线支付</string>
    <string name="payondelivery">货到付款</string>

    <string name="submit_order">提交订单</string>
    
    <!-- 注册 -->
    <string name="register_certain_name">请确认你的国家和地区并输入你的手机号</string>
    <string name="country">国家和地区</string>
    <string name="China">中国</string>
    <string name="prephonenumber1">+86</string>
    <string name="gou1">已阅读并同意</string>
    <string name="gou2">注册使用协议</string>
    
    
    <!-- 宝贝详情 -->
    <string name="cart1">购物车</string>
    <string name="enter_cart">加入购物车</string>
    <string name="buy">立即购买</string>
    
    <!-- 登陆成功 -->
    <string name="succeed">注册成功，返回登陆</string>
    
    <!-- 添加地址 -->
    <string name="xingming">姓名</string>
    <string name="dianhua">电话</string>
    <string name="dizhi">地址</string>
    <string name="bianji">点击编辑</string>
    
    <!-- 支付宝登陆 -->
    <string name="alipay_register">支付宝登陆</string>
    <string name="alipay_id">支付宝账号</string>
    <string name="alipay_password">支付密码</string>
    
    <!-- 确认支付 -->
    <string name="alipay_tea">梨花茶（2）</string>
    <string name="alipay_price">￥0.02</string>
    <string name="alipay_affirm">确认支付</string>
    
    <!-- 订单成功 -->
    <string name="ordersucceed">订单成功！</string>
    <string name="ordersucceed1">优饮君会尽快安排送货，请亲稍作等候</string>
    <string name="order_number">订单号</string>
    <string name="order_number1">00235</string>
    <string name="alipay_way">支付方式</string>
    <string name="alipay_way1">货到付款</string>
    <string name="consignee">收货人</string>
    <string name="consignee1">银子姜</string>
    <string name="consignee_phone">18246598979</string>
    <string name="consignee_address">地址</string>
    <string name="consignee_address1">广州中医药大学工科楼G627</string>
    <string name="beizhu">备注</string>
    <string name="beizhu1">无</string>
    <string name="return_cart">返回购物车</string>
    <string name="return_first">返回首页</string>
    
    
    <!-- 首页 -->
    <string name="youyin">优饮</string>
    <string name="first_hint">我爱喝的，搜一搜</string>
    <string name="up_time">上架时间</string>
    <string name="sale_volume">销量</string>
    <string name="inventory">库存</string>
    <string name="wuhuatea">五花茶</string>
    <string name="first_price">￥5.00</string>
    <string name="funtion">清热解毒、生津止渴、解酒去湿、健胃消滞</string>
    <string name="total_volume">总销量</string>
    <string name="amount">0件</string>
    <string name="four">4-9</string>
    
    <!-- 个人信息 -->
    <string name="information_touxiang">头像</string>
    <string name="information_username">用户名</string>
    <string name="information_phonenum">手机号</string>
    <string name="information_setpassword">密码设置</string>
    <string name="information_address">收件地址</string>
    <string name="information_cart">我的购物车</string>
    <string name="information_help">帮助与反馈</string>
    
    <string name="search_label">优饮</string>
    <string name="search_hint">请输入商品名称</string>
    <string name="search_error">没有搜索到此商品</string>

    <string name="quxiao">取消</string>
    
    
</resources>
