<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#ebebeb"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/text1"
            android:layout_toRightOf="@id/text1"
            android:text="@string/text2"
            android:textColor="#FF6100"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/text1"
            android:layout_toRightOf="@id/text2"
            android:text="@string/text3"
            android:textSize="15dp" />
    </RelativeLayout>
    <!-- 发送短信的号码 -->

    <TextView
        android:id="@+id/VerifyPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/phonenumber"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/verifyCodeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/VerifyPhone"
        android:layout_marginTop="20dp" 
        android:gravity="center_horizontal"
        android:paddingLeft="60dip"
        android:paddingRight="50dip">

        <!-- 输入验证码 -->

        <EditText
            android:id="@+id/VerifyEdit"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:background="@drawable/iforminput_bg"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:hint="@string/text4"
            android:textSize="15sp" />

        <!-- 接收短信倒计时 -->

        <Button
            android:id="@+id/getVerifyBtn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/verify_code_bg"
            android:text="重新获取"
            android:textColor="@color/white" 
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/unGetCodeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/layout1"
        android:layout_below="@id/verifyCodeLayout"
        android:layout_marginTop="40dp"
        android:text="@string/text6" />

    <TextView
        android:id="@+id/yuyin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/unGetCodeTv"
        android:layout_toRightOf="@id/unGetCodeTv"
        android:text="@string/text7"
        android:textColor="@color/voice_vertify" />

</RelativeLayout>