<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_gravity="center"
    android:background="#ebebeb">
    

    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="58dp"
        android:layout_marginLeft="20dp"/>
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/enter_password"
        android:hint="@string/enter_password"
        android:textSize="15dp"
        android:background="@drawable/iforminput_bg"
        android:layout_marginTop="80dp"
        android:paddingLeft="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/retype_password"
        android:hint="@string/retype_password"
        android:textSize="15dp"
        android:background="@drawable/iforminput_bg"
        android:layout_marginTop="140dp"
        android:paddingLeft="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

</RelativeLayout>
